# feff85_cpp

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  feff8l.cpp
cmake/: CompilerSettings.cmake
docs/: conf.py  constants.rst  index.rst  installation.rst  modules.rst  testing.rst  theory.rst  usage.rst
docs/modules/: atom.rst  common.rst  debye.rst  exch.rst  ff2x.rst  fms.rst  fovrg.rst  genfmt.rst  json_io.rst  math.rst  par.rst  path.rst  pipeline.rst  pot.rst  rdinp.rst  xsph.rst
include/feff/: constants.hpp  dimensions.hpp  feff_input.hpp  json_io.hpp  types.hpp
src/atom/: CMakeLists.txt  atom_types.hpp  coulomb_integrals.hpp  dsordf.hpp  etotal.cpp  etotal.hpp  fpf0.cpp  fpf0.hpp  inmuat.cpp  inmuat.hpp  intdir.cpp  intdir.hpp  lagdat.cpp  lagdat.hpp  muatco.cpp  muatco.hpp  nucdev.cpp  nucdev.hpp  ortdat.cpp  ortdat.hpp  potrdf.cpp  potrdf.hpp  radial_integrals.cpp  radial_integrals.hpp  s02at.cpp  s02at.hpp  scfdat.cpp  scfdat.hpp  scfdat_fortran_bridge.cpp  scfdat_fortran_bridge.hpp  soldir.cpp  soldir.hpp  tabrat.cpp  tabrat.hpp  utility.cpp  utility.hpp  vlda.cpp  vlda.hpp  wfirdf.cpp  wfirdf.hpp
src/common/: CMakeLists.txt  file_io.cpp  file_io.hpp  grid_interpolation.cpp  grid_interpolation.hpp  itoken.cpp  itoken.hpp  logging.cpp  logging.hpp  orbital_data.cpp  orbital_data.hpp  pad_io.cpp  pad_io.hpp  periodic_table.hpp  physics_utils.cpp  physics_utils.hpp  qsort.hpp  radial_grid.hpp  string_utils.cpp  string_utils.hpp
src/debye/: CMakeLists.txt  debye.hpp  sigcl.cpp  sigm3.cpp  sigms.cpp  sigrem.cpp  sigrem.hpp  sigte3.cpp
src/exch/: CMakeLists.txt  csigma.cpp  csigma.hpp  csigz.cpp  csigz.hpp  cubic_exch.cpp  cubic_exch.hpp  edp.cpp  edp.hpp  ffq.cpp  ffq.hpp  fndsng.cpp  fndsng.hpp  imhl.cpp  imhl.hpp  mpse.cpp  mpse.hpp  quinn.cpp  quinn.hpp  rhl.cpp  rhl.hpp  rhlbp.cpp  rhlbp.hpp  vbh.cpp  vbh.hpp  xcpot.cpp  xcpot.hpp
src/ff2x/: CMakeLists.txt  dwadd.cpp  dwadd.hpp  exconv.cpp  exconv.hpp  feffdt.cpp  feffdt.hpp  ff2afs.cpp  ff2afs.hpp  ff2chi.cpp  ff2chi.hpp  ff2x.cpp  ff2x.hpp  ff2x_types.hpp  ff2xmu.cpp  ff2xmu.hpp  fprime.cpp  fprime.hpp  rdfbin.cpp  rdfbin.hpp  rdxbin.cpp  rdxbin.hpp  reff2x.cpp  reff2x.hpp  xscorr.cpp  xscorr.hpp
src/fms/: CMakeLists.txt  fms_core.cpp  fms_core.hpp  fms_types.hpp  fmsie.cpp  fmsie.hpp  fmstot.cpp  fmstot.hpp  ggbi.cpp  ggbi.hpp  gggm.cpp  gggm.hpp  gglu.cpp  gglu.hpp  ggrm.cpp  ggrm.hpp  ggtf.cpp  ggtf.hpp  reafms.cpp  reafms.hpp  xprep.cpp  xprep.hpp  yprep.cpp  yprep.hpp
src/fovrg/: CMakeLists.txt  dfovrg.cpp  dfovrg.hpp  inmuac.cpp  inmuac.hpp  intout.cpp  intout.hpp  muatcc.cpp  muatcc.hpp  nucdec.cpp  nucdec.hpp  ortdac.cpp  ortdac.hpp  potdvp.cpp  potdvp.hpp  potex.cpp  potex.hpp  radial_integrals_c.cpp  radial_integrals_c.hpp  solin.cpp  solin.hpp  solout.cpp  solout.hpp  wfirdc.cpp  wfirdc.hpp
src/genfmt/: CMakeLists.txt  fmtrxi.cpp  fmtrxi.hpp  genfmt.cpp  genfmt.hpp  genfmt_data.hpp  genfmt_prep.cpp  genfmt_prep.hpp  import_calc.cpp  import_calc.hpp  mmtr.cpp  mmtr.hpp  mmtrxi.cpp  mmtrxi.hpp  onepath.cpp  onepath.hpp  pathgeom.cpp  pathgeom.hpp  rdpath.cpp  rdpath.hpp  read_onepath.cpp  read_onepath.hpp  regenf.cpp  regenf.hpp  rot3i.cpp  rot3i.hpp  sclmz.cpp  sclmz.hpp  setlam.cpp  setlam.hpp  snlm.cpp  snlm.hpp  trig_utils.cpp  trig_utils.hpp  xstar.cpp  xstar.hpp
src/json_io/: CMakeLists.txt  json_io.cpp
src/math/: CMakeLists.txt  bcoef.cpp  bcoef.hpp  bessel.cpp  bessel.hpp  convolution.cpp  convolution.hpp  determinant.cpp  determinant.hpp  distance.cpp  distance.hpp  integration.cpp  integration.hpp  interpolation.cpp  interpolation.hpp  legendre.cpp  legendre.hpp  phase_amplitude.cpp  phase_amplitude.hpp  polynomial_roots.cpp  polynomial_roots.hpp  sommerfeld.cpp  sommerfeld.hpp  wigner.cpp  wigner.hpp
src/par/: CMakeLists.txt  parallel.cpp  parallel.hpp
src/path/: CMakeLists.txt  ccrit.cpp  ccrit.hpp  ffmod4.cpp  ffmod4.hpp  heap.cpp  heap.hpp  ipack.cpp  ipack.hpp  mcrith.cpp  mcrith.hpp  mcritk.cpp  mcritk.hpp  mpprmd.cpp  mpprmd.hpp  mpprmp.cpp  mpprmp.hpp  mrb.cpp  mrb.hpp  outcrt.cpp  outcrt.hpp  path_data.hpp  paths.cpp  paths.hpp  pathsd.cpp  pathsd.hpp  phash.cpp  phash.hpp  prcrit.cpp  prcrit.hpp  repath.cpp  repath.hpp  sortix.cpp  sortix.hpp  timrep.cpp  timrep.hpp
src/pipeline/: CMakeLists.txt  feff_pipeline.cpp  feff_pipeline.hpp
src/pot/: CMakeLists.txt  afolp.cpp  afolp.hpp  broydn.cpp  broydn.hpp  corval.cpp  corval.hpp  coulom.cpp  coulom.hpp  fermi.cpp  fermi.hpp  ff2g.cpp  ff2g.hpp  frnrm.cpp  frnrm.hpp  grids.cpp  grids.hpp  inipot.cpp  inipot.hpp  istprm.cpp  istprm.hpp  lapack_shim.cpp  moveh.cpp  moveh.hpp  movrlp.cpp  movrlp.hpp  ovp2mt.cpp  ovp2mt.hpp  ovrlp.cpp  ovrlp.hpp  pot.cpp  pot.hpp  reapot.cpp  reapot.hpp  rholie.cpp  rholie.hpp  scmt.cpp  scmt.hpp  scmtmp.cpp  scmtmp.hpp  (+8 more)
src/rdinp/: CMakeLists.txt  eu2au.cpp  eu2au.hpp  ffsort.cpp  ffsort.hpp  iniall.cpp  iniall.hpp  mkptz.cpp  mkptz.hpp  rdinp.cpp  rdinp.hpp  setedg.cpp  setedg.hpp
src/xsph/: CMakeLists.txt  acoef.cpp  acoef.hpp  axafs.cpp  axafs.hpp  fmssz.cpp  fmssz.hpp  getedg.cpp  getedg.hpp  phase.cpp  phase.hpp  phmesh.cpp  phmesh.hpp  phmesh2.cpp  phmesh2.hpp  radint.cpp  radint.hpp  rdgrid.cpp  rdgrid.hpp  rexsph.cpp  rexsph.hpp  rholat.cpp  rholat.hpp  rholsz.cpp  rholsz.hpp  szlz.cpp  szlz.hpp  wphase.cpp  wphase.hpp  wrxsph.cpp  wrxsph.hpp  xsect.cpp  xsect.hpp  xsph.cpp  xsph.hpp
tests/integration/: CMakeLists.txt  benchmark.py  pipeline_test.cpp  rdinp_test.cpp  test_helpers.hpp
tests/integration/work/: .gitignore
tests/integration/work/Copper/: debug.txt  debug2.txt  debug_cu.txt
tests/integration/work/UO2/fortran_fresh/: atoms.json  ff2x.json  phase.pad  pot.json  pot.pad  xsect.json
tests/integration/work/UO2/fortran_full/: feff.pad  geom.json  libpotph.json  path.json  phase.pad  xsph.json
tests/unit/: CMakeLists.txt  atom_test.cpp  common_test.cpp  exch_test.cpp  fovrg_test.cpp  math_test.cpp  par_test.cpp
